Revision history for {{$dist->name}}

{{$NEXT}}

0.56      2018-09-03 09:17:42 -0400
  - lib method accepts code reference which will be called immediately
    and results added to lib list

0.55      2018-08-29 10:37:36 -0400
  - Production release identical to 0.54_03

0.54_03   2018-08-28 10:46:04 -0400
  - Additional test diagnostics.

0.54_02   2018-08-28 05:30:04 -0400
  - record as closure argument is now read-only.  This makes
    sense since such records are actually copies.  For when
    you need a non-copy use an opaque type instead.  This allows
    records with rw strings (although they will be ro in the
    closure).

0.54_01   2018-08-16 03:27:31 -0400
  - Experimental: allow record as closure argument
    Records with string_rw are not supported, and
    will likely crash your script if you try to use
    them.  Support for such records is probably not in
    the cards, but a future version may disallow them
    to avoid crashes.
  - Closure objects now have a sticky method, similar to what
    is already available in the discouraged FFI::Platypus::Declare
    interface

0.53      2018-08-15 20:38:29 -0400
  - Production release identical to 0.52_04

0.52_04   2018-08-15 05:52:15 -0400
  - Work-around for Strawberry Perl 5.14.4 unicode bug (see gh#85)

0.52_03   2018-08-14 15:28:19 -0400
  - Major refactoring of test suite

0.52_02   2018-08-14 08:05:07 -0400
  - Added standard RTLD_ constants to FFI::Platypus::DL
  - Fixed long standing but till now unused bug on Windows where dlopen was
    returning a handle for libraries that weren't actually being loaded.

0.52_01   2018-08-13 20:39:32 -0400
  - Testing: moved libtest to t/ffi, using the same convention as FFI::Build
  - Added FFI::Platypus::DL.  Previously this had been (under a different
    name) a private interface to libdl used by FFI::Platypus under the covers.
    On Windows it is an emulation layer over the native equivalents.

0.51      2018-08-09 03:14:15 -0400